# pycalc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yaml  release.yml
data/elements/: elements.json
docs/: FEATURES.md  index.html  script.js  styles.css
resources/: lexer.lua  parser.lua  preprocess.lua  token.lua
src/: main.py
src/modules/: basic.py  number.py  probability.py
src/pycalc/: algebra.py  basic.py  calculus.py  chemistry.py  finance.py  main.py  number.py  parser.py  probability.py
src/pycalc/utils/: console.py  guards.py  history.py
src/utils/: console.py  guards.py  history.py
tests/: test_basic.py  test_calculus.py  test_finance.py  test_number.py  test_parser.py  test_probability.py
website/: index.html
