[project]
name = "pycalc"
version = "0.0.5"
description = "A simple command-line calculator"
authors = [{name="an0nym9"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
]

packages = [
    { include = "pycalc", from = "src" }
]

[tool.poetry.scripts]
pycalc = "pycalc.main:main"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.2,<10.0.0)",
    "pyinstaller (>=6.18.0,<7.0.0)"
]
